# kagi-assistant-desktop

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package.json  popOS-installation-plan.md  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: auto-merge-deps.yml  build-macos.yml  build.yml  ci.yml  release.yml  security-scan.yml  upstream-sync.yml  version-bump.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
