[package]
name = "kagi-assistant-desktop"
version = "0.1.0"
description = "Kagi Assistant Desktop Application"
authors = ["0xGingi"]
edition = "2021"

[lib]
name = "kagi_assistant_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["rustls-tls"] }
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

